@@ -845,7 +845,8 @@
           <td tal:define="field python:here.getField('keepAccessToItemWhenAdviceIsGiven')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
-          <td>
+          <td tal:define="field python:here.getField('versionateAdviceIfGivenAndItemModified')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
         </tr>
         <tr valign="top">
